# zmq-examples

./: .gitignore  README.md  pyproject.toml
client-server/: client.py  server.py  test.py
client-server/authentication/: client.py  generate_certificates.py  server.py
client-server/basic/: server.py
client-server/devices/: client.py  device.py  manager.py  server.py
devices/: README.md  device.py
pub-sub/: test.py
pub-sub/basic/: pub.py  sub.py
workers/: base.py  processors.py  threaders.py
