[project]
name = "zmq-examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
dependencies = ["pyzmq>=26.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
